[package]
name = "jeopardy"
version = "0.1.0"
authors = ["Zachary Neely <zrussellneely@gmail.com> <zrussellneely@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
data-url = "0.1"
env_logger = "0.7"
futures = "0.3"
itertools = "0.9"
lazy_static = "1"
log = "0.4"
memorable-wordlist = "0.1"
once_cell = "1"
parking_lot = "0.10"
rand_chacha = "0.2"
rand = "0.7"
sha2 = "0.8"
serde = "1"
tokio = { version = "0.2", features = ["rt-core", "rt-threaded", "net", "sync", "time", "fs"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
#wamp_async = { git = "https://gitlab.com/elast0ny/wamp_async-rs.git" }
wamp_async = { path = "wamp_async-rs" }

[profile.release]
lto = true
